"fix" div wrap defiant img w/ html css. add resized jpg. add some padded p tags

--- a/css/index.css
+++ b/css/index.css
@@ -165,12 +165,6 @@ p {
   width: 50%;
 }
 
-.joke_writer {
-  content: url(https://scontent.cdninstagram.com/v/t39.30808-6/452937521_17999782277646998_8596854747353481617_n.jpg?stp=dst-jpg_e35&efg=eyJ2ZW5jb2RlX3RhZyI6ImltYWdlX3VybGdlbi4xMDgweDEwODAuc2RyLmYzMDgwOC5kZWZhdWx0X2ltYWdlIn0&_nc_ht=scontent.cdninstagram.com&_nc_cat=102&_nc_ohc=wlGjpy0PQ_4Q7kNvgHmKtxS&_nc_gid=00e9ba64612c4db0851a2cfb7825c6ca&edm=APs17CUAAAAA&ccb=7-5&ig_cache_key=MzQyMTUwNjIzNTA1OTUwOTk4OQ%3D%3D.3-ccb7-5&oh=00_AYBJl8QqhEkpv8zrR_V0kmXZFjKztH2y-4XygO4IXHXTEw&oe=66F56871&_nc_sid=10d13b);
-  max-height: 20%;
-  max-width: 20%;
-  z-index: 1;
-}
 
 
 .fizzle {
